syntax = "proto3";
import "google/protobuf/any.proto";

package com.roje.bombak.common.api;

//客户端发送到服务器的消息
message C2SMessage{
    int32 serial = 1;
    int64 timestamp = 2;
    string serviceType = 3;
    int32 messageId = 4;
    google.protobuf.Any data = 5;
}

//服务器发送给客户端的消息
message S2CMessage{
    int32 messageId = 1;
    int64 timestamp = 3;
    int32 errorCode = 4;
    google.protobuf.Any data = 6;
}

//包装后的客户端消息
message InnerC2SMessage {
    C2SMessage csMessage = 1;
    int64 uid = 2;
    string senderType = 3;
    string senderId = 4;
}

message InnerS2CMessage {
    S2CMessage scMessage = 1;
    int64 uid = 2;
    string senderType = 3;
    string senderId = 4;
}
